# partychrasher

./: .gitignore  Cargo.toml  rest_request_examples.http  todo.md
src/: cli.rs  config.rs  db.rs  entity.rs  event_registry.rs  helper.rs  main.rs  output.rs  player.rs  queue_manager.rs  resampler.rs  scanner.rs  seeder.rs  sql.rs  thread_channels.rs  web_app.rs  websocket.rs
src/entity/: album.rs  album_artist.rs  album_track.rs  artist.rs  artist_track.rs  client.rs  client_entity.rs  media.rs  playlist.rs  playlist_tracks.rs  search.rs  track.rs
src/entity/album/: album_entity.rs  album_event.rs  album_repo.rs
src/entity/album_artist/: album_artist_entity.rs  album_artist_repo.rs
src/entity/album_track/: album_track_entity.rs  album_track_repo.rs
src/entity/artist/: artist_entity.rs  artist_event.rs  artist_repo.rs
src/entity/artist_track/: artist_track_entity.rs  artist_track_repo.rs
src/entity/client/: client_entity.rs  client_repo.rs
src/entity/media/: media_entity.rs  media_repo.rs
src/entity/playlist/: playlist_entity.rs  playlist_event.rs  playlist_repo.rs
src/entity/playlist_tracks/: playlist_track_event.rs  playlist_tracks_repo.rs  playlist_tracts_entity.rs
src/entity/search/: search_entity.rs  search_event_handler.rs  search_repo.rs
src/web_app/: admin.rs  api.rs  api_response.rs  auth_middleware.rs  docs.rs  event_handler.rs  file_server.rs  manage_client.rs  query.rs  user.rs  web_app_event_handler.rs
src/web_app/api/: v1.rs
src/websocket/: server.rs  session.rs  websocket_message.rs
static/swagger/: entry.js
ui/: README.md
(+16 files in other folders)
