[package]
name = "party_chrasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.3", features = ["all"] }
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.5"
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
actix-web-actors = "4.2.0"
actix-ws = "0.2.5"
actix-files = "0.6.2"
actix = "0.13.1"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["time", "chrono", "sqlite", "runtime-tokio-rustls"] }
clap = {version = "4.4.8", features = ["derive"]}
ulid = "1.1.0"
sha256 = "1.4.0"
futures = "0.3.29"
futures-util = "0.3.29"
base64 = "0.21.5"


[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.15"
rb = "0.4"
rubato = "0.14"
